kubernetes/api-gateway/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: asia-southeast1-docker.pkg.dev/peerprep-440702/peerprep/gateway:latest
          ports:
            - name: api-gateway
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
            initialDelaySeconds:  20
            periodSeconds: 20
          resources:
              requests:
                cpu: 250m
                memory: 512Mi
                ephemeral-storage: 500Mi
              limits:
                cpu: 500m
                memory: 1Gi
                ephemeral-storage: 1Gi
      restartPolicy: Always
