kubernetes/api-gateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    app: gateway-ingress
  annotations:
    kubernetes.io/ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: "peerprep-g42"
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port:
                number: 80
